--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Story Teller</title>
-    <link type="css" rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="top">
+        <div class="nav">
+        <div class="nav-logo">
+            <img src="/img/logo.png" alt="">
+        </div>
+        <div class="nav-text"><p>
+            <a href="#about">About</a>
+            <a href="#campaign">Campaign</a>
+            <a href="#attributions">Attributions</a>
+        </div></p></div>
+    </div>
         <div class="container">
             <h1>Welcome Adventurer!</h1>
         </div>
 
-    </div>
-    
+
 </body>
 </html>
