--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,37 @@
     <title>Story Teller</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div id="top">
-        <div class="nav">
-        <div class="nav-logo">
-            <img src="/img/logo.png" alt="">
+        <div id="nav">
+            <div class="nav-container">
+                <div class="nav-logo">
+                    <img src="/img/logo.png" alt="">
+                </div>
+                <div class="nav-text">
+                    <a href="#about">About</a>
+                    <a href="#campaign">Campaign</a>
+                    <a href="#attributions">Attributions</a>
+                </div>
+            </div>
+            <div class="explore">
+                <h2>Find Your <br>
+                    Legendary Journey</h2>
+                <p>Pick your favorite TTRPG campaign, roll a character and delve into terra incognita</p>
+                <div class="button">
+                    <a href="#campaign" class="explore">Explore</a>
+                    <a href="about">Learn More</a>
+                </div>
+            </div>
         </div>
-        <div class="nav-text"><p>
-            <a href="#about">About</a>
-            <a href="#campaign">Campaign</a>
-            <a href="#attributions">Attributions</a>
-        </div></p></div>
     </div>
-        <div class="container">
-            <h1>Welcome Adventurer!</h1>
-        </div>
+
+    <div class="container">
+        <h3>Welcome Adventurer!</h3>
+    </div>
 
 
 </body>
+
 </html>
