--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div id="nav">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="/img/logo.png" alt="">
+                    <a href="/">
+                        <img src="/img/logo.png" alt=""></a>
                 </div>
                 <div class="nav-text">
                     <a href="#about">About</a>
@@ -22,20 +23,26 @@
                     <a href="#attributions">Attributions</a>
                 </div>
             </div>
-            <div class="explore">
-                <h2>Find Your <br>
-                    Legendary Journey</h2>
-                <p>Pick your favorite TTRPG campaign, roll a character and delve into terra incognita</p>
-                <div class="button">
-                    <a href="#campaign" class="explore">Explore</a>
-                    <a href="about">Learn More</a>
-                </div>
+        </div>
+        <div class="explore">
+            <h2>Find Your <br>
+                Legendary Journey</h2>
+            <p>Pick your favorite TTRPG campaign, roll a character and delve into terra incognita</p>
+            <div class="button">
+                <a href="#campaign" class="explore2">Explore</a>
+                <a href="about">Learn More</a>
             </div>
         </div>
     </div>
-
-    <div class="container">
+    </div>
+    <div id="mid">
+        <div class="logo2">
+            <a href="">
+            <img src="/img/logo-2.png" alt=""></a>
+        </div>
+        <div class="about">
         <h3>Welcome Adventurer!</h3>
+    </div>
     </div>
 
 
