--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <img src="/img/logo-2.png" alt=""></a>
         </div>
         <div class="about">
+            <div class="floating-island">
+                <a href="">
+                <img src="/img/floating-island.png" alt=""></a>
+            </div>
         <h3>Welcome Adventurer!</h3>
     </div>
     </div>
