--- a/index.html
+++ b/index.html
@@ -46,7 +46,27 @@
                 <img src="/img/floating-island.png" alt=""></a>
             </div>
         <h3>Welcome Adventurer!</h3>
+        <div class="p1">
+        <p>StoryTeller is a grimoire of of TTRPG campaigns. “But what’s a TTRPG ?” you might ask, well here’s a whole paragraph we took from wikipedia:</p>
+        </div>
+        <br>
+        <div class="border">
+        <p>A tabletop role-playing game (typically abbreviated as TRPG or TTRPG), also known as a pen-and-paper role-playing game, is a form of role-playing game (RPG) in which the participants describe their characters' actions through speech. Participants determine the actions of their characters based on their characterization, and the actions succeed or fail according to a set formal system of rules and guidelines. Within the rules, players have the freedom to improvise; their choices shape the direction and outcome of the game. <br>
+        <br>
+        The terms pen-and-paper and tabletop are generally only used to distinguish this format of RPG from other formats, since neither pen and paper nor a table are strictly necessary.</p></div>
+        <br>
+        <div class="p1">
+        <p>Dungeons & Dragons? Pathfinder? The Call of Cthulhu? We have it all! Wanna be a pirate and plunder bounties? Wizards that keep casting fireballs even though it’s a close quarter combat then died from a 1d4 damage? A rogue with traumatic childhood or a bard who keep trying to seduce the dragon? Go browse the whole compendium and start your journey!
+        </p>
+        </div>
+        <div class="dices">
+            <a href="">
+            <img src="/img/dices.png" alt=""></a>
+        </div>
     </div>
+    </div>
+    <div id="campaign">
+        <h3>&#9876;&#65039;Campaigns&#9876;&#65039;</h3>
     </div>
 
 
