--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <br>
         <div class="border">
-        <p>A tabletop role-playing game (typically abbreviated as TRPG or TTRPG), also known as a pen-and-paper role-playing game, is a form of role-playing game (RPG) in which the participants describe their characters' actions through speech. Participants determine the actions of their characters based on their characterization, and the actions succeed or fail according to a set formal system of rules and guidelines. Within the rules, players have the freedom to improvise; their choices shape the direction and outcome of the game. <br>
+        <p>A <strong>tabletop role-playing game</strong>(typically abbreviated as <strong>TRPG</strong> or <strong>TTRPG</strong>), also known as a <strong>pen-and-paper role-playing game</strong>, is a form of role-playing game (RPG) in which the participants describe their characters' actions through speech. Participants determine the actions of their characters based on their characterization, and the actions succeed or fail according to a set formal system of rules and guidelines. Within the rules, players have the freedom to improvise; their choices shape the direction and outcome of the game. <br>
         <br>
         The terms pen-and-paper and tabletop are generally only used to distinguish this format of RPG from other formats, since neither pen and paper nor a table are strictly necessary.</p></div>
         <br>
