--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="nav-container">
                 <div class="nav-logo">
                     <a href="/">
-                        <img src="/img/logo.png" alt=""></a>
+                        <img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="nav-text">
                     <a href="#about">About</a>
@@ -38,7 +38,7 @@
     <div id="mid">
         <div class="logo2">
             <a href="">
-            <img src="/img/logo-2.png" alt=""></a>
+            <img src="img/logo-2.png" alt=""></a>
         </div>
         <div class="about">
             <div class="floating-island">
