--- a/index.html
+++ b/index.html
@@ -38,36 +38,84 @@
     <div id="mid">
         <div class="logo2">
             <a href="">
-            <img src="img/logo-2.png" alt=""></a>
+                <img src="img/logo-2.png" alt=""></a>
         </div>
         <div class="about">
             <div class="floating-island">
                 <a href="">
-                <img src="/img/floating-island.png" alt=""></a>
+                    <img src="/img/floating-island.png" alt=""></a>
             </div>
-        <h3>Welcome Adventurer!</h3>
-        <div class="p1">
-        <p>StoryTeller is a grimoire of of TTRPG campaigns. “But what’s a TTRPG ?” you might ask, well here’s a whole paragraph we took from wikipedia:</p>
+            <h3>Welcome Adventurer!</h3>
+            <div class="p1">
+                <p>StoryTeller is a grimoire of of TTRPG campaigns. “But what’s a TTRPG ?” you might ask, well here’s a
+                    whole paragraph we took from wikipedia:</p>
+            </div>
+            <br>
+            <div class="border">
+                <p>A <strong>tabletop role-playing game</strong>(typically abbreviated as <strong>TRPG</strong> or
+                    <strong>TTRPG</strong>), also known as a <strong>pen-and-paper role-playing game</strong>, is a form
+                    of role-playing game (RPG) in which the participants describe their characters' actions through
+                    speech. Participants determine the actions of their characters based on their characterization, and
+                    the actions succeed or fail according to a set formal system of rules and guidelines. Within the
+                    rules, players have the freedom to improvise; their choices shape the direction and outcome of the
+                    game. <br>
+                    <br>
+                    The terms pen-and-paper and tabletop are generally only used to distinguish this format of RPG from
+                    other formats, since neither pen and paper nor a table are strictly necessary.
+                </p>
+            </div>
+            <br>
+            <div class="p1">
+                <p>Dungeons & Dragons? Pathfinder? The Call of Cthulhu? We have it all! Wanna be a pirate and plunder
+                    bounties? Wizards that keep casting fireballs even though it’s a close quarter combat then died from
+                    a 1d4 damage? A rogue with traumatic childhood or a bard who keep trying to seduce the dragon? Go
+                    browse the whole compendium and start your journey!
+                </p>
+            </div>
+            <div class="dices">
+                <a href="">
+                    <img src="/img/dices.png" alt=""></a>
+            </div>
         </div>
-        <br>
-        <div class="border">
-        <p>A <strong>tabletop role-playing game</strong>(typically abbreviated as <strong>TRPG</strong> or <strong>TTRPG</strong>), also known as a <strong>pen-and-paper role-playing game</strong>, is a form of role-playing game (RPG) in which the participants describe their characters' actions through speech. Participants determine the actions of their characters based on their characterization, and the actions succeed or fail according to a set formal system of rules and guidelines. Within the rules, players have the freedom to improvise; their choices shape the direction and outcome of the game. <br>
-        <br>
-        The terms pen-and-paper and tabletop are generally only used to distinguish this format of RPG from other formats, since neither pen and paper nor a table are strictly necessary.</p></div>
-        <br>
-        <div class="p1">
-        <p>Dungeons & Dragons? Pathfinder? The Call of Cthulhu? We have it all! Wanna be a pirate and plunder bounties? Wizards that keep casting fireballs even though it’s a close quarter combat then died from a 1d4 damage? A rogue with traumatic childhood or a bard who keep trying to seduce the dragon? Go browse the whole compendium and start your journey!
-        </p>
-        </div>
-        <div class="dices">
-            <a href="">
-            <img src="/img/dices.png" alt=""></a>
-        </div>
-    </div>
     </div>
     <div id="campaign">
         <h3>&#9876;&#65039;Campaigns&#9876;&#65039;</h3>
     </div>
+    <div class="slider">
+        <div class="slide-wrapper">
+            <div id="arkemyr" class="slide-card">
+                <div class="gradient"></div>
+                <a href="">
+                    <span class="campaign-logo">
+                        <img src="/img/arkemyr-logo.png" alt=""></a></span>
+            </div>
+            <div id="burning-tale" class="slide-card">
+                <div class="gradient"></div>
+                <a href="">
+                    <span class="campaign-logo">
+                        <img src="/img/bvale-logo.png" alt=""></a></span>
+            </div>
+            <div id="leviathan" class="slide-card">
+                <div class="gradient"></div>
+                <a href="">
+                    <span class="campaign-logo">
+                        <img src="/img/odyssey-logo.png" alt=""></a></span>
+            </div>
+            <div id="doa" class="slide-card">
+                <div class="gradient"></div>
+                <a href="">
+                    <span class="campaign-logo">
+                        <img src="/img/doa-logo.png" alt=""></a></span>
+            </div>
+        </div>
+    </div>
+    <div class="campaign-slide-nav">
+        <div class="slide-prev">
+            <i class="ri-arrow-left-line"></i>
+        </div>
+        <div class="slide-next">
+            <i class="ri-arrow-right-line"></i>
+        </div>
 
 
 </body>
