--- a/index.html
+++ b/index.html
@@ -111,12 +111,27 @@
     </div>
     <div class="campaign-slide-nav">
         <div class="slide-prev">
-            <i class="ri-arrow-left-line"></i>
+            <a href="#" class="previous">&#8592;</a>
         </div>
         <div class="slide-next">
-            <i class="ri-arrow-right-line"></i>
+            <a href="#" class="next">&#8594;</a>
         </div>
-
+    </div>
+    <div id="newsletter">
+        <div class="newsletter-content">
+            <h3>Get regular updates from us!</h3>
+            <p>Enter your email below to get awesome updates about upcoming events, new campaigns and many more!</p>
+            <form action="">
+                <input type="text" placeholder="Email Address">
+                <button>join</button>
+            </form>
+        </div>
+    </div>
+    <div id="attribution">
+        <div class="newsletter-content">
+            Attributions: assets by <a href="https://www.freepik.com/author/dgim-studio">dgim-studio</a>, <a href="https://www.freepik.com/author/upklyak">upklyak</a>,  Dragon icons created by <a href="https://www.flaticon.com/free-icons/dragon">Freepik - Flaticon</a>
+        </div>
+    </div>
 
 </body>
 
