--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="about">
             <div class="floating-island">
                 <a href="">
-                    <img src="/img/floating-island.png" alt=""></a>
+                    <img src="img/floating-island.png" alt=""></a>
             </div>
             <h3>Welcome Adventurer!</h3>
             <div class="p1">
@@ -74,7 +74,7 @@
             </div>
             <div class="dices">
                 <a href="">
-                    <img src="/img/dices.png" alt=""></a>
+                    <img src="img/dices.png" alt=""></a>
             </div>
         </div>
     </div>
@@ -87,25 +87,25 @@
                 <div class="gradient"></div>
                 <a href="">
                     <span class="campaign-logo">
-                        <img src="/img/arkemyr-logo.png" alt=""></a></span>
+                        <img src="img/arkemyr-logo.png" alt=""></a></span>
             </div>
             <div id="burning-tale" class="slide-card">
                 <div class="gradient"></div>
                 <a href="">
                     <span class="campaign-logo">
-                        <img src="/img/bvale-logo.png" alt=""></a></span>
+                        <img src="img/bvale-logo.png" alt=""></a></span>
             </div>
             <div id="leviathan" class="slide-card">
                 <div class="gradient"></div>
                 <a href="">
                     <span class="campaign-logo">
-                        <img src="/img/odyssey-logo.png" alt=""></a></span>
+                        <img src="img/odyssey-logo.png" alt=""></a></span>
             </div>
             <div id="doa" class="slide-card">
                 <div class="gradient"></div>
                 <a href="">
                     <span class="campaign-logo">
-                        <img src="/img/doa-logo.png" alt=""></a></span>
+                        <img src="img/doa-logo.png" alt=""></a></span>
             </div>
         </div>
     </div>
