--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <a href="">
                 <img src="img/logo-2.png" alt=""></a>
         </div>
-        <div class="about">
+        <div class="about-content">
             <div class="floating-island">
                 <a href="">
-                    <img src="img/floating-island.png" alt=""></a>
+                    <img src="img/floating-island.png" alt="" class="float-img"></a>
             </div>
             <h3>Welcome Adventurer!</h3>
             <div class="p1">
@@ -147,7 +147,21 @@
                 nextEl: '.next',
                 prevEl: '.previous',
             },
-        });</script>
+            breakpoints: {
+                640: {
+                    slidesPerView: 2,
+                    spaceBetween: 20,
+                },
+                768: {
+                    slidesPerView: 2,
+                    spaceBetween: 40,
+                },
+                1024: {
+                    slidesPerView: 3,
+                    spaceBetween: 45,
+                },
+            }
+            });</script>
 </body>
 
 </html>
